<resources>
    <string name="app_name">TelloMapper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TelloMapper</string>
    <string name="nav_header_subtitle">developed by Nile Camai</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Each main fragment needs:
        nav text
        fragment text
        -->
    <string name="home_nav_text">Home</string>
    <string name="home_fragment_text">TelloMapper</string>
    <string name="home_fragment_title">Welcome.</string>


    <string name="edit_nav_text">Edit</string>
    <string name="edit_fragment_text">Edit a Path</string>
    <string name="edit_toggle_on_text">Editing</string>
    <string name="edit_toggle_off_text">Click to Edit</string>
    <string name="add_node_button_text">Add Node</string>
    <string name="remove_node_button_text">Remove Node</string>
    <string name="save_button_text">Save Path</string>
    <string name="scaling_seeker_text">Scaling</string>
    <string name="zoom_seeker_text">Zoom</string>
    <string name="spinner_label">Load a Path</string>

    <string name="no_coordinate_warning">No coordinate specified.</string>
    <string name="path_title">List:</string>
    <string name="current_coordinate_title">Selected:</string>

    <string name="fly_nav_text">Fly</string>
    <string name="fly_fragment_text">Fly a Path</string>


    <string name="diagnostics_nav_text">Diagnostics</string>
    <string name="diagnostics_fragment_text">Diagnose Tello</string>
    <string name="save_dialog_title">Save</string>
    <string name="file_name_exit_text_hint">File Name</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="prompt_warning">Your filename contains illegal characters.</string>
    <string name="prompt_request">Please enter a filename.</string>
    <string name="load_text">Load</string>
    <string name="fly_button">Fly!</string>
    <string name="spinner_label_text">Select a file:</string>
    <string name="delete_text">Delete</string>
    <string name="home_fragment_subtitle">Let\'s get started:</string>
    <string name="yes">Yes</string>


</resources>
