<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home_nav_text" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/edit_nav_text" />
        <item
            android:id="@+id/nav_fly"
            android:icon="@drawable/ic_menu_drone"
            android:title="@string/fly_nav_text" />
        <item
            android:id="@+id/nav_diagnostics"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/diagnostics_nav_text" />
    </group>

</menu>
